--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>橙子计算器</title>
-    <link href="https://cdn.bootcss.com/modern-normalize/0.5.0/modern-normalize.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -18,6 +18,7 @@
             height: 30px;
             padding: 0 6px;
             border: 1px solid #ccc;
+            -webkit-appearance: none;
         }
         tr {
             height: 36px;
