--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             height: 30px;
             padding: 0 6px;
             border: 1px solid #ccc;
-            /* 去除系统默认的样式 */
+            /* 去除ios默认的阴影 */
             -webkit-appearance: none; 
-            /* 点击高亮的颜色 */
-            -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+            /* 去除ios点击高亮的颜色 */
+            -webkit-tap-highlight-color: rgba(0,0,0,0); 
         }
         tr {
             height: 36px;
