--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             height: 30px;
             padding: 0 6px;
             border: 1px solid #ccc;
+            border-radius: 3px;
             /* 去除ios默认的阴影 */
-            -webkit-appearance: none; 
+            -webkit-appearance: none;
             /* 去除ios点击高亮的颜色 */
-            -webkit-tap-highlight-color: rgba(0,0,0,0); 
+            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            transition: all 0.3s;
+        }
+        input:focus {
+            border: 1px solid transparent;
+            box-shadow: 0 0 10px 0 #ccc;
         }
         tr {
             height: 36px;
