--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 <td><input type="text" v-model.number.trim="orangeSmallCount"></td>
             </tr>
             <tr>
-                <td>橙子价格：</td>
+                <td>橙子单价：</td>
                 <td><input type="text" v-model.number.trim="orangePrice"></td>
             </tr>
             <tr>
-                <td>大箱子价格：</td>
+                <td>大箱子单价：</td>
                 <td><input type="text" v-model.number.trim="boxBigPrice"></td>
             </tr>
             <tr>
-                <td>小箱子价格：</td>
+                <td>小箱子单价：</td>
                 <td><input type="text" v-model.number.trim="boxSmallPrice"></td>
             </tr>
             <tr>
